--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ipyjs",
   "version": "0.1.0",
-  "description": "a Jupyter widget that lets you run JavaScript",
+  "description": "test",
   "keywords": [
     "jupyter",
     "jupyterlab",
@@ -19,7 +19,7 @@
   },
   "license": "BSD-3-Clause",
   "author": {
-    "name": "Anthony Androulakis",
+    "name": "anthony",
     "email": "me@me.com"
   },
   "main": "lib/index.js",
@@ -71,7 +71,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.0",
     "mkdirp": "^0.5.1",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^2.6.2",
     "source-map-loader": "^1.1.3",
